package de.olegrom.starwars.android.utils

object TestTag {
    const val appBarTitle = "App Bar Title"
    const val listElement = "List Element"

    const val detailHeader = "Detail Header"
    const val detailView = "Detail View"
    const val detailParameters = "Parameters Card"

    const val menuFilms = "Menu Films"
    const val menuShips = "Menu Ships"
    const val menuPersons = "Menu Person"
    const val menuPlanets = "Menu Planet"
}